<resources>
    <string name="app_name">maktab_hw9_2</string>
    <string name="title_activity_one">OneActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cheat">Cheat</string>

    <string name="mtrue">True</string>
    <string name="mfalse">False</string>
    <string name="sureCheat">Are you sure about cheating ?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>